--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/CFGtoTAC/SolidOpt.Services.CFGtoTAC.Test.csproj
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/CFGtoTAC/SolidOpt.Services.CFGtoTAC.Test.csproj
@@ -68,6 +68,8 @@
     <None Include="test\TestCases\ILLoadStore.il.tac" />
     <None Include="test\TestCases\ILDup2.il" />
     <None Include="test\TestCases\ILDup2.il.tac" />
+    <None Include="test\TestCases\CallStaticSkipResult.il" />
+    <None Include="test\TestCases\CallStaticSkipResult.il.tac" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="test\TACTestFixture.cs" />
