* Add Type to the metadata. It is useful when we read the data from a CSV file for example all column values come as strings. The type allow us to deduce what the actual type was. For instance, ID often is from type int (auto increment) and so on; * Add simple type resolver. * Add test case for the type resolver. Needs to be extended further. * Make 'described' field in the Metadata.

--- a/Tools/DataMorphose/trunk/src/DataMorphose.csproj
+++ b/Tools/DataMorphose/trunk/src/DataMorphose.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Controller\ReversibleActions\IReversibleAction.cs" />
     <Compile Include="Controller\ReversibleActions\Actions\SortByColumnAction.cs" />
     <Compile Include="Controller\Import\CSVLexer.cs" />
+    <Compile Include="Controller\Deduce\ColumnType.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
