--- a/Tools/DataMorphose/trunk/test/DataMorphose.Test.csproj
+++ b/Tools/DataMorphose/trunk/test/DataMorphose.Test.csproj
@@ -36,6 +36,7 @@
     <Compile Include="BaseTestFixture.cs" />
     <Compile Include="CSVImport.cs" />
     <Compile Include="Sort.cs" />
+    <Compile Include="DeduceType.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
