Fix call to method TAC support. Add TAC builder support for call to non-static methods. Add new test case for callvirt.

--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/CFGtoTAC/SolidOpt.Services.CFGtoTAC.Test.csproj
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/CFGtoTAC/SolidOpt.Services.CFGtoTAC.Test.csproj
@@ -70,6 +70,8 @@
     <None Include="test\TestCases\ILDup2.il.tac" />
     <None Include="test\TestCases\CallStaticSkipResult.il" />
     <None Include="test\TestCases\CallStaticSkipResult.il.tac" />
+    <None Include="test\TestCases\Call.il" />
+    <None Include="test\TestCases\Call.il.tac" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="test\TACTestFixture.cs" />
