* Rename Relation to Constraint, because from database point of view everything is a constraint. For example one can think of the relation Foreign Key, however this is nothing but another constraint on that field, saying that it can contain only the range of values contained the pointed column. * Add inital implementation of constraint deduction mechanism. The main idea of the deductions is to recognize constraints. For example if we read the data without the schema (from CSV files or from db engines, which doesn't support certain constraints like MySQL), there has to be way to understand the logical relations between the data. * Add initial implementation of few constraints like Primary Keys, Foreign Keys, Unique and Not Null. The way of checking for constraint is a bit clumsy yet.
It is important to note that we decided that the constraints should be *on a column*
This is not quite true in the case of complex constraints like complex primary
keys, which include more than one column. In that case each column should be 
decorated with constraint. The constraint should contain all the columns involded.

--- a/Tools/DataMorphose/trunk/test/DataMorphose.Test.csproj
+++ b/Tools/DataMorphose/trunk/test/DataMorphose.Test.csproj
@@ -37,6 +37,7 @@
     <Compile Include="CSVImport.cs" />
     <Compile Include="Sort.cs" />
     <Compile Include="DeduceType.cs" />
+    <Compile Include="DeduceConstraints.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
