--- a/Tools/DataMorphose/trunk/src/DataMorphose.csproj
+++ b/Tools/DataMorphose/trunk/src/DataMorphose.csproj
@@ -56,7 +56,6 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Model\Meta\MetaData.cs" />
-    <Compile Include="Model\Meta\Relation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\Table.cs" />
@@ -69,6 +68,8 @@
     <Compile Include="Controller\ReversibleActions\Actions\SortByColumnAction.cs" />
     <Compile Include="Controller\Import\CSVLexer.cs" />
     <Compile Include="Controller\Deduce\ColumnType.cs" />
+    <Compile Include="Model\Meta\Constraint.cs" />
+    <Compile Include="Controller\Deduce\ColumnConstraints.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
