Add overflow check to TAC. Add test case for overflow. Fix semantic for some conv instruction.

--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/CFGtoTAC/SolidOpt.Services.CFGtoTAC.Test.csproj
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/CFGtoTAC/SolidOpt.Services.CFGtoTAC.Test.csproj
@@ -76,6 +76,8 @@
     <None Include="test\TestCases\Jmp.il.tac" />
     <None Include="test\TestCases\Cast.il" />
     <None Include="test\TestCases\Cast.il.tac" />
+    <None Include="test\TestCases\ExpressionOverflow.il.tac" />
+    <None Include="test\TestCases\ExpressionOverflow.il" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="test\TACTestFixture.cs" />
