--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/CFGtoTAC/SolidOpt.Services.CFGtoTAC.Test.csproj
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/CFGtoTAC/SolidOpt.Services.CFGtoTAC.Test.csproj
@@ -78,6 +78,8 @@
     <None Include="test\TestCases\Cast.il.tac" />
     <None Include="test\TestCases\ExpressionOverflow.il.tac" />
     <None Include="test\TestCases\ExpressionOverflow.il" />
+    <None Include="test\TestCases\SimpleExpressionUnsigned.il" />
+    <None Include="test\TestCases\SimpleExpressionUnsigned.il.tac" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="test\TACTestFixture.cs" />
