Implement simple column splitter. The current implementation splits a given column into two (based on given delimiter).

--- a/Tools/DataMorphose/trunk/src/DataMorphose.csproj
+++ b/Tools/DataMorphose/trunk/src/DataMorphose.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Model\Meta\Constraint.cs" />
     <Compile Include="Controller\Deduce\ColumnConstraints.cs" />
     <Compile Include="Controller\Export\CSVExporter.cs" />
+    <Compile Include="Controller\Transform\SplitColumn.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
