* Fix Open Generic GetService test

--- a/SolidOpt/trunk/test/SolidOpt/SolidOpt.Services.Tests/SolidOpt.Services.Tests.csproj
+++ b/SolidOpt/trunk/test/SolidOpt/SolidOpt.Services.Tests/SolidOpt.Services.Tests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="MyServices\IMyGenericDictionaryService.cs" />
     <Compile Include="MyServices\MyGenericService2Provider.cs" />
     <Compile Include="MyServices\MySubService.cs" />
+    <Compile Include="MyServices\MyGenericService3Provider.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\Services\SolidOpt.Services.csproj">
