Put all libraries in one folder for now, because it simplifies dependency resolution.

--- a/SolidOpt/trunk/src/Services/Transformations/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/CMakeLists.txt
@@ -1,6 +1,8 @@
-csharp_add_dependency("../SolidOpt.Services")
 
 csharp_add_library(
   SolidOpt.Services.Transformations
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   )
+
+add_subdirectory(Optimizations)
