--- a/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/ConstantPropagation/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/ConstantPropagation/src/CMakeLists.txt
@@ -2,6 +2,7 @@
 csharp_add_library(
   SolidOpt.Services.Transformations.Optimizations.ConstantPropagation
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/Cecil.Decompiler.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.Optimizations.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   )
