Build actually Services.Transformations.MultiModel.dll and add base infrastructure to build ConstantFolding.dll

--- a/SolidOpt/trunk/src/Services/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/CMakeLists.txt
@@ -2,4 +2,5 @@ csharp_add_library(
   SolidOpt.Services
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   )
+add_subdirectory(Compatibility)
 add_subdirectory(Transformations)
