--- a/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/CMakeLists.txt
@@ -1,4 +1,4 @@
-#add_subdirectory(ConstantFolding)
+add_subdirectory(ConstantFolding)
 add_subdirectory(ConstantPropagation)
 #add_subdirectory(MethodInline)
 #add_subdirectory(SimplifyExpression)
