--- a/SolidOpt/trunk/src/Services/Transformations/CodeModel/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/CodeModel/CMakeLists.txt
@@ -1,3 +1,4 @@
+add_subdirectory(AbstractSyntacticTree)
 add_subdirectory(CallGraph)
 add_subdirectory(ControlFlowGraph)
 add_subdirectory(ThreeAddressCode)
