--- a/SolidOpt/trunk/src/Services/Transformations/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/CMakeLists.txt
@@ -5,5 +5,6 @@ csharp_add_library(
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   )
 
+add_subdirectory(CodeModel)
 add_subdirectory(MultiModel)
 add_subdirectory(Optimizations)
