CMake: Now half of our source tree is actually buildable :)

--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/CMakeLists.txt
@@ -9,3 +9,5 @@ csharp_add_library(
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   )
+
+add_subdirectory(ILtoAST)
