Fix mistaken lib name

--- a/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/SimplifyExpression/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/SimplifyExpression/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 csharp_add_library(
-  SolidOpt.Services.Transformations.CodeModel.SimplifyExpression
+  SolidOpt.Services.Transformations.Optimizations.SimplifyExpression
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Cecil.Decompiler.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.Optimizations.dll
