Lib Optimization Annotations depend on lib Optimizations

--- a/SolidOpt/trunk/src/Services/Transformations/Optimizations/SolidOpt.Services.Optimizations.Annotations/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Optimizations/SolidOpt.Services.Optimizations.Annotations/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 csharp_add_library(
   SolidOpt.Services.Transformations.Optimizations.Annotations
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.Optimizations.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   )
