--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoAST/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoAST/src/CMakeLists.txt
@@ -1,9 +1,11 @@
 csharp_add_library(
   SolidOpt.Services.Transformations.MultiModel.ILtoAST
-  ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
-  ${CMAKE_LIBRARY_OUTPUT_DIR}/Cecil.Decompiler.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.MultiModel.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.AbstractSyntacticTree.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.ControlFlowGraph.dll
+  # Externals
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/Cecil.Decompiler.dll
+  ###
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   )
