--- a/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/ConstantPropagation/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/ConstantPropagation/src/CMakeLists.txt
@@ -1,9 +1,10 @@
-
 csharp_add_library(
-  SolidOpt.Services.Transformations.Optimizations.ConstantPropagation
+  SolidOpt.Services.Transformations.Optimizations.AST.ConstantPropagation
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.AbstractSyntacticTree.dll
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.Optimizations.dll
+  # External
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Cecil.Decompiler.dll
-  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.Optimizations.dll
-  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.AbstractSyntacticTree.dll
+  ###
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   )
