--- a/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/MethodInline/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/MethodInline/src/CMakeLists.txt
@@ -1,12 +1,13 @@
-
 csharp_add_library(
-  SolidOpt.Services.Transformations.Optimizations.MethodInline
-  ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
-  ${CMAKE_LIBRARY_OUTPUT_DIR}/Cecil.Decompiler.dll
-  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.Optimizations.Annotations.dll
+  SolidOpt.Services.Transformations.Optimizations.AST.MethodInline
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.AbstractSyntacticTree.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.MultiModel.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.MultiModel.ILtoAST.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.Optimizations.dll
-  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.AbstractSyntacticTree.dll
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.Optimizations.Annotations.dll
+  # External
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/Cecil.Decompiler.dll
+  ###
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   )
