--- a/SolidOpt/trunk/src/Services/Transformations/Optimizations/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Optimizations/CMakeLists.txt
@@ -1,9 +1,10 @@
-
 csharp_add_library(
   SolidOpt.Services.Transformations.Optimizations
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   )
 
-add_subdirectory(SolidOpt.Services.Optimizations.Annotations)
+add_subdirectory(SolidOpt.Services.Optimizations.Annotations) # Many depend on that
 add_subdirectory(AST)
+add_subdirectory(CFG)
+add_subdirectory(IL)
