Add cmake support for easier versioning of the framework. It will be useful for doxygen output and AssemblyInfo.cs template and lot more.
SolidOpt_Major - Framework major version
SolidOpt_Minor - Framework minor version
SolidOptRevision - Svn working copy revision.

--- a/SolidOpt/trunk/CMakeLists.txt
+++ b/SolidOpt/trunk/CMakeLists.txt
@@ -30,6 +30,7 @@ endif()
 file(MAKE_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIR})
 file(MAKE_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIR})
 
+include(Version.cmake)
 
 add_subdirectory(src)
 add_subdirectory(doc)
