Template-ize the AssemblyInfo.cs in cmake build system. AssemblyInfos are automatically generated by cmake and put in the binary dir. The csprojs are updated correspondingly.

--- a/SolidOpt/trunk/CMakeLists.txt
+++ b/SolidOpt/trunk/CMakeLists.txt
@@ -2,8 +2,8 @@ project(SolidOpt)
 
 cmake_minimum_required(VERSION 2.6.2)
 
-# Add patch to the modules
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+# Tell cmake to look for modules in that path first.
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 # Disallow insource build since I never test that
 string(COMPARE EQUAL "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_BINARY_DIR}" INSOURCE)
