--- a/SolidOpt/trunk/src/Core/Loader/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Core/Loader/src/CMakeLists.txt
@@ -2,4 +2,5 @@ csharp_add_library(
   SolidOpt.Core.Loader
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
+  ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
   )
