--- a/SolidOpt/trunk/src/Services/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/CMakeLists.txt
@@ -1,6 +1,7 @@
 csharp_add_library(
   SolidOpt.Services
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
+  ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
   )
 
 add_subdirectory(Compatibility)
