--- a/SolidOpt/trunk/src/Services/Compatibility/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Compatibility/CMakeLists.txt
@@ -1,4 +1,5 @@
 csharp_add_library(
   SolidOpt.Services.Compatibility
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
+  ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
   )
