--- a/SolidOpt/trunk/src/Services/Transformations/CodeModel/AbstractSyntacticTree/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/CodeModel/AbstractSyntacticTree/src/CMakeLists.txt
@@ -1,8 +1,8 @@
-
 csharp_add_library(
   SolidOpt.Services.Transformations.CodeModel.AbstractSyntacticTree
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Cecil.Decompiler.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
+  ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
   )
