--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoAST/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoAST/src/CMakeLists.txt
@@ -8,4 +8,5 @@ csharp_add_library(
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Cecil.Decompiler.dll
   ###
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
+  ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
   )
