--- a/SolidOpt/trunk/src/Services/Transformations/Optimizations/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Optimizations/CMakeLists.txt
@@ -2,6 +2,7 @@ csharp_add_library(
   SolidOpt.Services.Transformations.Optimizations
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
+  ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
   )
 
 add_subdirectory(SolidOpt.Services.Optimizations.Annotations) # Many depend on that
