--- a/SolidOpt/trunk/cmake/SolutionName-v11.sln.in
+++ b/SolidOpt/trunk/cmake/SolutionName-v11.sln.in
@@ -1,26 +1,24 @@
 ﻿
 Microsoft Visual Studio Solution File, Format Version 11.00
 # Visual Studio 2010
-###Project("{@@UUID1@@}") = "@@ProjectName@@", "@@ProjectFolder@@\@@ProjectName@@.csproj", "{@@ProjectUUID}"
-###EndProject
-@@Projects@@
+### Solution Projects examples
 #Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "ProjectName", "ProjectFolder\ProjectName.csproj", "{18248EA1-C1A4-4FF4-AE89-BA3C4E0F1DA5}"
-#EndProject
-#Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "SolutionFolder", "SolutionFolder", "{33A7A87E-39D4-4CD7-A869-9C9370AE7CF1}"
 #EndProject
 #Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "ProjectInSolutionFolderName", "ProjectInSolutionFolderFolder\ProjectInSolutionFolderName.csproj", "{87134710-FC34-4923-B630-06098A0D0751}"
 #EndProject
+#Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "SolutionFolder", "SolutionFolder", "{33A7A87E-39D4-4CD7-A869-9C9370AE7CF1}"
+#EndProject
+### Project item template
+#Project("{@SolutionUUID@}") = "@ProjectName@", "@ProjectFolder@\@ProjectName@.csproj", "{@ProjectUUID}"
+#EndProject
+@Projects@
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug|Any CPU = Debug|Any CPU
 		Release|Any CPU = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(ProjectConfigurationPlatforms) = postSolution
-###		{@@ProjectUUID@@}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-###		{@@ProjectUUID@@}.Debug|Any CPU.Build.0 = Debug|Any CPU
-###		{@@ProjectUUID@@}.Release|Any CPU.ActiveCfg = Release|Any CPU
-###		{@@ProjectUUID@@}.Release|Any CPU.Build.0 = Release|Any CPU
-@@Platforms@@
+### Project platforms examples
 #		{18248EA1-C1A4-4FF4-AE89-BA3C4E0F1DA5}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
 #		{18248EA1-C1A4-4FF4-AE89-BA3C4E0F1DA5}.Debug|Any CPU.Build.0 = Debug|Any CPU
 #		{18248EA1-C1A4-4FF4-AE89-BA3C4E0F1DA5}.Release|Any CPU.ActiveCfg = Release|Any CPU
@@ -29,8 +27,15 @@ Global
 #		{87134710-FC34-4923-B630-06098A0D0751}.Debug|Any CPU.Build.0 = Debug|Any CPU
 #		{87134710-FC34-4923-B630-06098A0D0751}.Release|Any CPU.ActiveCfg = Release|Any CPU
 #		{87134710-FC34-4923-B630-06098A0D0751}.Release|Any CPU.Build.0 = Release|Any CPU
+### Project platforms template
+#		{@ProjectUUID@}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+#		{@ProjectUUID@}.Debug|Any CPU.Build.0 = Debug|Any CPU
+#		{@ProjectUUID@}.Release|Any CPU.ActiveCfg = Release|Any CPU
+#		{@ProjectUUID@}.Release|Any CPU.Build.0 = Release|Any CPU
+@Platforms@
 	EndGlobalSection
 	GlobalSection(NestedProjects) = preSolution
+### Nested projects example
 #		{87134710-FC34-4923-B630-06098A0D0751} = {33A7A87E-39D4-4CD7-A869-9C9370AE7CF1}
 	EndGlobalSection
 	GlobalSection(MonoDevelopProperties) = preSolution
